<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/textView2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/welcome_msg" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.192" />
    <EditText android:textSize="14.0sp" android:id="@id/secretInput" android:layout_width="wrap_content" android:layout_height="wrap_content" android:hint="@string/enter_secret" android:ems="10" android:inputType="textPersonName" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/checkButton" app:layout_constraintHorizontal_bias="0.736" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView2" app:layout_constraintVertical_bias="0.042" />
    <TextView android:textSize="14.0sp" android:textColor="#ffff0000" android:id="@id/textViewWrong" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/wrong_try_again" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/secretInput" app:layout_constraintVertical_bias="0.066" />
    <Button android:id="@id/checkButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="68.0dip" android:text="@string/check" android:layout_marginEnd="68.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.25" />
    <TextView android:textColor="#ff23d516" android:id="@id/textViewCorrect" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/correct" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.497" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/secretInput" app:layout_constraintVertical_bias="0.064" />
</androidx.constraintlayout.widget.ConstraintLayout>